fixed viewport to bottom on mobile

--- a/client/src/Sass/sections/__viewport.scss
+++ b/client/src/Sass/sections/__viewport.scss
@@ -90,7 +90,7 @@
             height: 8rem;
         }
         &__grow {
-            position: absolute;
+            position: fixed;
             bottom: 0;
             transition: all 0.2s;
             -webkit-transition: all 0.2s;
